--- a/source/_posts/日志备份和恢复.md
+++ b/source/_posts/日志备份和恢复.md
@@ -55,8 +55,10 @@ a.完整备份——sql认为需要保存最老LSN之前的LSN，一旦再有活
 ——不会自动截断——需要手动截断
 b.日志备份，选择日志截断
 ```
->>什么是MinLSN？
+<font color=red>什么是MinLSN？</font>
+
 Min Lsn：活动事务在日志中的最小LSN
+
 例子：
 ![image](https://raw.githubusercontent.com/Jaki0615/PIC/master/sql3.png)
 
@@ -114,16 +116,19 @@ Check Point检查点机制
 ```
 二恢复场景
 
-><FONT COLOR=#3299cc> A：什么都不做</FONT>
+<FONT COLOR=#3299cc> A：什么都不做</FONT>
 
->>没有commit，日志还没来得及写进去，就断电
+没有commit，日志还没来得及写进去，就断电
 ——日志没有，不影响data page
 
-><FONT COLOR=#3299cc> B：redo重做</FONT>
->>sql commit，日志也写进去了，data page 没做，就断电
+<FONT COLOR=#3299cc> B：redo重做</FONT>
 
-><FONT COLOR=#3299cc>undo撤销</FONT>
->>sql 没commit的，必须回滚。
+sql commit，日志也写进去了，data page 没做，就断电
+
+<FONT COLOR=#3299cc> C: undo撤销</FONT>
+
+sql 没commit的，必须回滚。
+
 ```
 苦逼的场景:
 开始一个事务(很长,忘记commit)，在一个月之后断电了....
